<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2eada" >

   <com.gwb.xiaomo.TitleLayout
       android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.gwb.xiaomo.TitleLayout>

    <ImageView
        android:id="@+id/iv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_centerHorizontal="true"
        android:scaleType="center"
        android:src="@drawable/xiaomo" />

    <TextView
        android:id="@+id/tv_clean"
        style="@style/more_setting_list"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/iv_app"
        android:background="@drawable/textview_shape"
        android:text="@string/clean" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/more_setting_list"
        android:layout_below="@id/tv_clean"
        android:background="@drawable/textview_shape"
        android:text="@string/version" />

    <TextView
        android:id="@+id/tv_functions"
        style="@style/more_setting_list"
        android:layout_below="@id/tv_version"
        android:background="@drawable/textview_shape"
        android:text="@string/feedback" />

    <TextView
        android:id="@+id/tv_version_info"
        style="@style/more_setting_list"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/version_info_right"
        android:textSize="18sp" />

    <TextView
        style="@style/more_setting_list"
        android:layout_above="@id/tv_version_info"
        android:gravity="center"
        android:text="@string/version_info_left"
        android:textSize="18sp" />

</RelativeLayout>