<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2eada"
    android:orientation="vertical" >

    <com.gwb.xiaomo.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.gwb.xiaomo.TitleLayout>

    <LinearLayout
        android:id="@+id/ll_theme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/icon_more_theme" />

        <TextView
            style="@style/more_list"
            android:layout_weight="4"
            android:text="@string/theme" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/icon_more_setting" />

        <TextView
            style="@style/more_list"
            android:layout_weight="4"
            android:text="@string/setting" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/icon_more_author" />

        <TextView
            style="@style/more_list"
            android:layout_weight="4"
            android:text="@string/about" />
    </LinearLayout>

</LinearLayout>