<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.gwb.xiaomo.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.gwb.xiaomo.TitleLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/linearlayout_shape"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:scaleType="fitStart"
            android:src="@drawable/theme1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/theme_style1"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_theme1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/theme_btn1"
            android:text="@string/theme_apply"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/linearlayout_shape"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:scaleType="fitStart"
            android:src="@drawable/theme2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/theme_style2"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_theme2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/theme_btn1"
            android:text="@string/theme_apply"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/linearlayout_shape"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:scaleType="fitStart"
            android:src="@drawable/theme3" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/theme_style3"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_theme3"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/theme_btn1"
            android:text="@string/theme_apply"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/linearlayout_shape"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="3dp"
            android:scaleType="fitStart"
            android:src="@drawable/theme4" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/theme_style4"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_theme4"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/theme_btn1"
            android:text="@string/theme_apply"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>